--- a/homework/DSI_06_Homework_Python/Answers/Homework_2_Python_ANSWERS.ipynb
+++ b/homework/DSI_06_Homework_Python/Answers/Homework_2_Python_ANSWERS.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 2,
    "id": "73414257-bccd-461f-813a-f1b9758ea1fc",
    "metadata": {},
    "outputs": [
@@ -218,7 +218,7 @@
        "[392 rows x 9 columns]"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -258,7 +258,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 3,
    "id": "8a82dda2-c5ef-4c9b-8eb3-9435044f9b61",
    "metadata": {},
    "outputs": [
@@ -292,7 +292,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 4,
    "id": "fac805f2-b26c-453d-8536-7456d5fa5822",
    "metadata": {},
    "outputs": [
@@ -323,7 +323,7 @@
     }
    ],
    "source": [
-    "# Replace 'DataFrame' with our actual dataset name\n",
+    "# Compute\n",
     "correlation_matrix = Auto.corr()\n",
     "\n",
     "# Display the correlation matrix\n",
