--- a/exercises/exercises_Python/6.4-resampling_exercises.ipynb
+++ b/exercises/exercises_Python/6.4-resampling_exercises.ipynb
@@ -22,6 +22,18 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "5c234885",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!pip install ISLP\n",
+    "\n",
+    "!pip install numpy==1.24.3"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 1,
    "id": "6edbc31d-be7c-4dd3-bb07-a9f681754433",
    "metadata": {},
@@ -136,9 +148,9 @@
    "id": "252d8d71-405e-4b5f-92ea-365e44b2a8c1",
    "metadata": {},
    "source": [
-    "So our estimated test MSE for the linear regression is 23.62.\r\n",
+    "So our estimated test MSE for the linear regression is 23.62.\n",
     "\n",
-    "**What would happen if we used a different set of observations for our training set? Repeat the above\r",
+    "**What would happen if we used a different set of observations for our training set? Repeat the above\n",
     "process using a different seed (i.e. set.seed(2)) and report the differences.**"
    ]
   },
