--- a/exercises/exercises_Python/6.5-linear_model_selection_regularization_exercises.ipynb
+++ b/exercises/exercises_Python/6.5-linear_model_selection_regularization_exercises.ipynb
@@ -22,6 +22,18 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "f80363fc",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!pip install ISLP\n",
+    "\n",
+    "!pip install numpy==1.24.3"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 21,
    "id": "3335f7c9-c115-405b-9413-8bbafb155d20",
    "metadata": {},
@@ -1440,8 +1452,8 @@
    "id": "3c59d4ce-a7a3-4d1a-a168-9bb1dcc36e5b",
    "metadata": {},
    "source": [
-    "**Fit a linear regression model to the data. Compute the test MSE for the linear regression\r",
-    "model. Compare the results from the linear regression, ridge regression, and the lasso. Which\r",
+    "**Fit a linear regression model to the data. Compute the test MSE for the linear regression\n",
+    "model. Compare the results from the linear regression, ridge regression, and the lasso. Which\n",
     "is the best model and why?**\n",
     "\n",
     "*These exercises were adapted from : James, Gareth, et al. An Introduction to Statistical Learning: with Applications in Python, Springer, 2023.*"
