--- a/exercises/exercises_Python/6.6-beyond_linearity_exercises.ipynb
+++ b/exercises/exercises_Python/6.6-beyond_linearity_exercises.ipynb
@@ -10,6 +10,18 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "abed582d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!pip install ISLP\n",
+    "\n",
+    "!pip install numpy==1.24.3"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 3,
    "id": "680c15cc-6bb5-4aff-8b34-75541a59349a",
    "metadata": {},
@@ -548,8 +560,8 @@
    "id": "bbc81a89-6f71-4147-a5a7-84da7e04153b",
    "metadata": {},
    "source": [
-    "The intercept coefficient can be interpreted as the average salary for individuals age < 34. The remaining\r",
-    "coefficients are the average additional salary for those in the other age groups.\r\n",
+    "The intercept coefficient can be interpreted as the average salary for individuals age < 34. The remaining\n",
+    "coefficients are the average additional salary for those in the other age groups.\n",
     "**Make wage predictions for a range of ages and plot the results including the 95% confidence intervals.**"
    ]
   },
@@ -881,7 +893,7 @@
    "id": "d7933f0d-e771-4383-8ccc-4679b18e0d34",
    "metadata": {},
    "source": [
-    "**Redo the fitting and plotting but this time choose a smaller span. What differences do you\r",
+    "**Redo the fitting and plotting but this time choose a smaller span. What differences do you\n",
     "see? Explain why choosing a smaller span causes this.**"
    ]
   },
@@ -890,8 +902,8 @@
    "id": "55fd4eb6-99fc-477e-9db7-db2403d1dc55",
    "metadata": {},
    "source": [
-    "### Generalised Additive Models\r\n",
-    "We will fit a GAM to predict Wage using the predictors year, age, and education. The quantitative\r",
+    "### Generalised Additive Models\n",
+    "We will fit a GAM to predict Wage using the predictors year, age, and education. The quantitative\n",
     "predictors will be a natural spline functions and education will naturally be fit with a step function.\n",
     "\n",
     "To fit GAMs in Python we will use the `pygam` package which can be installed via `pip install pygam`"
@@ -1054,14 +1066,14 @@
    "id": "67481f16-69d4-4b6b-bf64-65f53f8dd6fc",
    "metadata": {},
    "source": [
-    "We can see from the plot that wage is increasing somewhat linearly with year. **Use an ANOVA test to\r",
+    "We can see from the plot that wage is increasing somewhat linearly with year. **Use an ANOVA test to\n",
     "determine which of these three models is the best:**\n",
-    "\r",
+    "\n",
     "- The same GAM as before except exclude year.\n",
     "- The same GAM as before except it instead has a linear function of year (written simply + year)\n",
-    "- The GAM we have already fit.\r\n",
+    "- The GAM we have already fit.\n",
     "\n",
-    "**Recall that the models must be supplied to the anova() function in order of increasing complexity.\r",
+    "**Recall that the models must be supplied to the anova() function in order of increasing complexity.\n",
     "Once you have determined which model is the best, plot the relationships as we did before.**"
    ]
   },
