--- a/exercises/exercises_Python/6.7-tree_based_methods_exercises.ipynb
+++ b/exercises/exercises_Python/6.7-tree_based_methods_exercises.ipynb
@@ -10,6 +10,18 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "3aff2dcb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!pip install ISLP\n",
+    "\n",
+    "!pip install numpy==1.24.3"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 11,
    "id": "370bb0e1-530e-458d-a018-365f58495ad1",
    "metadata": {},
@@ -261,7 +273,7 @@
    "id": "25f9ea02-0a33-4766-a3b5-47f757ff49ee",
    "metadata": {},
    "source": [
-    "**Compute the test error rate of this pruned tree. How does the test error rate and the interpretability\r",
+    "**Compute the test error rate of this pruned tree. How does the test error rate and the interpretability\n",
     "of this tree compare to the inital tree?**"
    ]
   },
@@ -643,7 +655,7 @@
    "id": "2bc48808-2a91-4b90-b35a-3263e23485e8",
    "metadata": {},
    "source": [
-    "**Which two variables are the most important when determining median house values in Boston\r",
+    "**Which two variables are the most important when determining median house values in Boston\n",
     "suburbs?**"
    ]
   },
@@ -796,8 +808,8 @@
     "In this case, using $\\lambda=0.2$ leads to a almost the same test MSE\n",
     "as when using $\\lambda=0.001$.\n",
     "\n",
-    "**Try fitting a new boosted model to the training set using a higher value for shrinkage and\r",
-    "compute the test MSE. Which shrinkage parameter (between the two) yields the model with\r",
+    "**Try fitting a new boosted model to the training set using a higher value for shrinkage and\n",
+    "compute the test MSE. Which shrinkage parameter (between the two) yields the model with\n",
     "the best test error?**"
    ]
   },
