--- a/exercises/exercises_Python/6.8-support_vector_machines_exercises.ipynb
+++ b/exercises/exercises_Python/6.8-support_vector_machines_exercises.ipynb
@@ -10,6 +10,18 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "a604cac2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!pip install ISLP\n",
+    "\n",
+    "!pip install numpy==1.24.3"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 4,
    "id": "ef777465-b96f-4b0a-bd43-7247d3373260",
    "metadata": {},
@@ -93,7 +105,7 @@
     "maximal margin classifier. We will fit a support vector classifier instead. To start let’s put our observations\n",
     "in a data frame with the response coded as a factor.\n",
     "\n",
-    "Now we can use the `SVC()` function to fit our classifier. We choose kernal = \"linear\" to specify we want\r",
+    "Now we can use the `SVC()` function to fit our classifier. We choose kernal = \"linear\" to specify we want\n",
     "to fit a support vector classifier and set cost = 10."
    ]
   },
@@ -161,8 +173,8 @@
    "id": "f20d2790-ef23-40c4-a2c6-0f734c74e60b",
    "metadata": {},
    "source": [
-    "**Try fitting a support vector classifier with a smaller value for cost. Compare the results\r",
-    "including the number of support vectors to the above two classifiers. From this information\r",
+    "**Try fitting a support vector classifier with a smaller value for cost. Compare the results\n",
+    "including the number of support vectors to the above two classifiers. From this information\n",
     "explain the relationship between the cost parameter and C as we have described in the slides.**"
    ]
   },
@@ -390,8 +402,8 @@
    "id": "e95b652a-a2ca-4bbe-8bc3-b97b137b61ea",
    "metadata": {},
    "source": [
-    "### Support Vector Machine\r\n",
-    "We will once again use the SVC() function to fit an SVM with a non-linear kernel. We first generate some data with a\r",
+    "### Support Vector Machine\n",
+    "We will once again use the SVC() function to fit an SVM with a non-linear kernel. We first generate some data with a\n",
     "non-linear class boundary."
    ]
   },
@@ -489,11 +501,11 @@
    "id": "4293fcd5-8522-4843-9ce4-3b11992e3a8d",
    "metadata": {},
    "source": [
-    "**Perform cross-validation using `skm.GridSearchCV()` to select the best choice of gamma and cost. Try the\r",
-    "ranges cost = c(0.1, 1, 10, 100, 1000) and gamma = c(0.5, 1, 2, 3, 4). Output the best\r",
-    "model.**\r\n",
+    "**Perform cross-validation using `skm.GridSearchCV()` to select the best choice of gamma and cost. Try the\n",
+    "ranges cost = c(0.1, 1, 10, 100, 1000) and gamma = c(0.5, 1, 2, 3, 4). Output the best\n",
+    "model.**\n",
     "\n",
-    "**Using the best model, predict the responses for the test set. What percent of observations were\r",
+    "**Using the best model, predict the responses for the test set. What percent of observations were\n",
     "misclassified by this SVM?**"
    ]
   },
