--- a/exercises/exercises_Python/6.9-survival_analysis_exercises.ipynb
+++ b/exercises/exercises_Python/6.9-survival_analysis_exercises.ipynb
@@ -10,6 +10,18 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "09f91d52",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!pip install ISLP\n",
+    "\n",
+    "!pip install numpy==1.24.3"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 1,
    "id": "0f55590b-1931-4598-97de-6e05ae159cd9",
    "metadata": {},
@@ -90,8 +102,8 @@
    "id": "dd58baf6-b9ef-4ac6-b1b8-1362b27e25da",
    "metadata": {},
    "source": [
-    "We see there are 53 patients with status = 0 so this means status = 0 means the survival time is censored\r",
-    "and status = 1 means the survival time is uncensored.\r\n",
+    "We see there are 53 patients with status = 0 so this means status = 0 means the survival time is censored\n",
+    "and status = 1 means the survival time is uncensored.\n",
     "We can create the Kaplan-Meier survival curve using the `km.fit(`) function within the survival library."
    ]
   },
@@ -134,7 +146,7 @@
    "id": "8afd6e1e-b13f-4d02-8981-26337f38b8c4",
    "metadata": {},
    "source": [
-    "### The Log-Rank Test\r\n",
+    "### The Log-Rank Test\n",
     "Now we want to create Kaplan-Meier survival curves from the BrainCancer data that are separated by sex. We do this using the `groupby()` method of a dataframe. "
    ]
   },
@@ -278,7 +290,7 @@
    "id": "56d76a0c-48fd-4637-9c78-92958085f6ef",
    "metadata": {},
    "source": [
-    "### The Cox Proportional Hazards Model\r\n",
+    "### The Cox Proportional Hazards Model\n",
     "We have seen the restults from the log-rank test that compares the survival curves for males versus females form the BrainCancer data. Now we can fit a Cox proportional hazards model to test the exact samme thing, using the `CoxPHFitter()`. To begin, we consider a model that uses sex as the only predictor."
    ]
   },
@@ -493,8 +505,8 @@
    "id": "d2936c9d-26ab-46a3-a370-71d459678dbf",
    "metadata": {},
    "source": [
-    "Since `Meningioma` was coded as the baseline, the fitted coefficient 2.15 associated with `HG glioma` means that the risk associated with `HG glioma` is $e^{2.15} = 8.62$ times more that the risk of `Meningioma`.\r",
-    "\r",
+    "Since `Meningioma` was coded as the baseline, the fitted coefficient 2.15 associated with `HG glioma` means that the risk associated with `HG glioma` is $e^{2.15} = 8.62$ times more that the risk of `Meningioma`.\n",
+    "\n",
     "We can plot the survival curves for each diagnosis category while adusting for the other predictors. To make these plots we make a new data set where the value for each of the other predictors is the mean (if quantitative) or mode (if qualitative) of the variable. "
    ]
   },
